# RfSurfHmc

./: CMakeLists.txt  Makefile  README  README.md  Rc0  Rg0  clean.sh  compile.sh  hmc.in  main_DA.py  main_base.py  main_joint.py  param.yaml  plot.py  test.py  test_forward.py
include/: HMC.h  celldisp.h  disp.h  gaussian.h  surfdisp96.h
input/: crust_model.txt  hmc.in
model/: model_rf.py  model_rf_swd_vs_thk.py  model_surf.py
pyhmc/: hmc.py  hmcda.py
pythonfile/: init_model.py  show_model.py
src/: celldisp.cc  disp.cc  gaussian.cc  main.cc  plot_results.py  surfdisp96.f  synthetic.cc  utils.py
src/RF/: CMakeLists.txt  RFModule.f90  compile.sh  deconit.f90  fftpack.f90  main.cpp  rf_cal.hpp
src/SWD/: CMakeLists.txt  compile.sh  main.cpp  rayleighwavekernel.mod  rayleighwavemodel.mod  slegn96.f90  sregn96.f90  surfdisp.cpp  surfdisp.hpp  surfdisp96.f
